[package]
name = "on-call-support"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "0.57.1"
aws-sdk-dynamodb = "0.35.0"
aws-sdk-eventbridge = "0.35.0"
aws-sdk-secretsmanager = "0.35.0"
aws-sdk-scheduler = "0.13.0"
aws_lambda_events = { version = "0.12.0", default-features = false, features = ["apigw"] }
base64 = "0.21.2"
chacha20poly1305 = {version="0.10.1", features=["std"]}
chrono = "0.4.26"
chrono-tz = {version = "0.8.2", features=["std", "case-insensitive"]}
clap = {version ="4.3.3", features=["derive"]}
cron = "0.12.0"
derive_more = "0.99.17"
futures = "0.3.28"
form_urlencoded="1.2.0"
hex = "0.4.3"
lambda_runtime = "0.8.0"
lazy_static = "1.4.0"
more-asserts = "0.3.1"
regex = "1"
reqwest = {version="0.11.18", default-features = false, features=["gzip", "json", "rustls-tls-native-roots"]}
ring = "0.16.20"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
shlex = "1.1.0"
tokio = { version = "^1.0", features=["rt-multi-thread", "macros"]}
thiserror = "1.0.38"
tokio-stream = "0.1.14"

[dev-dependencies]
serial_test = "*"
tokio-test = "*"

