[package]
name = "on-call-support"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.11"
aws-sdk-cloudformation = "1.56.0"
aws-sdk-dynamodb = "1.56.0"
aws-sdk-eventbridge = "1.54.0"
aws-sdk-secretsmanager = "1.55.0"
aws-sdk-scheduler = "1.51.0"
aws_lambda_events = { version = "0.16.0", default-features = false, features = ["apigw"] }
base64 = "0.22.1"
chacha20poly1305 = {version="0.10.1", features=["std"]}
chrono = "0.4.26"
chrono-tz = {version = "0.10.0", features=["std", "case-insensitive"]}
clap = {version ="4.3.3", features=["derive"]}
cron = "0.13.0"
derive_more = {version = "1.0.0", features=["full"]}
futures = "0.3.28"
form_urlencoded="1.2.0"
hex = "0.4.3"
lambda_runtime = "0.13.0"
lazy_static = "1.4.0"
more-asserts = "0.3.1"
rand="0.8.5"
regex = "1"
reqwest = {version="0.12.9", default-features = false, features=["gzip", "json", "rustls-tls-native-roots"]}
ring = "0.17.8"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
shlex = "1.1.0"
tokio = { version = "^1.0", features=["rt-multi-thread", "macros", "sync"]}
thiserror = "2.0.9"
tokio-stream = "0.1.14"

[dev-dependencies]
serial_test = "*"
tokio-test = "*"

